--- a/stows/all/.config/starship.toml
+++ b/stows/all/.config/starship.toml
@@ -1,15 +1,64 @@
-format = "$battery$directory$nix_shell$vcsh$fossil_branch$git_branch$git_commit$git_state$git_metrics$git_status$hg_branch$line_break$character"
-command_timeout = 2000
+# format = "$battery$directory$nix_shell$vcsh$fossil_branch$git_branch$git_commit$git_state$git_metrics$git_status$hg_branch$line_break$character"
+# command_timeout = 2000
+#
+# [character]
+# error_symbol = "[λ](bold red)"
+# success_symbol = "[λ](bold yellow)"
+# vicmd_symbol = "[λ](bold green)"
+#
+# [directory]
+# style = "bold blue"
+# truncate_to_repo = true
+# truncation_symbol = ".../"
+#
+# [nix_shell]
+# format = "[$symbol]($style)"
+
+format = """
+$username\
+$hostname\
+$directory\
+$nix_shell\
+$git_branch\
+$git_state\
+$git_status\
+$cmd_duration\
+$line_break\
+$character"""
+
+[directory]
+style = "blue"
 
 [character]
+# success_symbol = "[❯](purple)"
+# error_symbol = "[❯](red)"
+# vimcmd_symbol = "[❮](green)"
 error_symbol = "[λ](bold red)"
 success_symbol = "[λ](bold yellow)"
 vicmd_symbol = "[λ](bold green)"
 
-[directory]
-style = "bold blue"
-truncate_to_repo = true
-truncation_symbol = ".../"
+[git_branch]
+format = "[$branch]($style)"
+style = "bright-black"
+
+[git_status]
+format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
+style = "cyan"
+conflicted = "​"
+untracked = "​"
+modified = "​"
+staged = "​"
+renamed = "​"
+deleted = "​"
+stashed = "≡"
+
+[git_state]
+format = '\([$state( $progress_current/$progress_total)]($style)\) '
+style = "bright-black"
+
+[cmd_duration]
+format = "[$duration]($style) "
+style = "yellow"
 
 [nix_shell]
 format = "[$symbol]($style)"
