tweaking just-sessionizer

--- a/stows/code/.config/tmux/tmux.conf
+++ b/stows/code/.config/tmux/tmux.conf
@@ -2,8 +2,9 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-set -g default-terminal "alacritty"
-set -ag terminal-overrides ",alacritty:RGB"
+# set -ag terminal-overrides ",wezterm:RGB"
+set -g default-terminal "wezterm"
+set-option -sa terminal-overrides ",xterm*:Tc"
 
 set  -g base-index 1
 setw -g pane-base-index 1
@@ -24,7 +25,8 @@ setw -g window-status-current-style fg=yellow,bold,bg=black
 
 bind-key -r f run-shell "tmux new-window tmux-sessionizer"
 bind-key o run-shell "tmux new-window -c \"#{pane_current_path}\" just-sessionizer window"
-bind-key C-o run-shell "tmux new-window -c \"#{pane_current_path}\" just-sessionizer session"
+# bind-key C-o run-shell "tmux new-window -c \"#{pane_current_path}\" just-sessionizer session"
+bind-key C-o run-shell "tmux split-window -h -c \"#{pane_current_path}\" just-sessionizer in-window"
 
 bind C-x split-window -v -c "#{pane_current_path}"
 bind C-v split-window -h -c "#{pane_current_path}"
