add tpm ++ tmux-catppuccin ++ tweak dm.sprun

--- a/stows/code/.config/tmux/tmux.conf
+++ b/stows/code/.config/tmux/tmux.conf
@@ -39,3 +39,9 @@ bind -r M-j resize-pane -D 1
 bind -r M-k resize-pane -U 1
 bind -r M-l resize-pane -R 1
 bind C-r source-file ~/.config/tmux/tmux.conf
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour 'moccha'
+
+run '~/.tmux/plugins/tpm/tpm'
