--- a/stows/code/.config/tmux/tmux.conf
+++ b/stows/code/.config/tmux/tmux.conf
@@ -13,15 +13,15 @@ set  -g mouse on
 set  -s escape-time 0
 set  -g history-limit 25000
 
-set -g status-interval 30
 set -g status-position top
-set -g status-justify left
-set -g status-left ""
-set -g status-right ""
-set -g status-style fg=white,bg=black
-set -g message-style fg=yellow,bold,bg=black
-setw -g window-status-style fg=white,bg=black
-setw -g window-status-current-style fg=yellow,bold,bg=black
+set -g status-interval 30
+# set -g status-justify left
+# set -g status-left ""
+# set -g status-right ""
+# set -g status-style fg=white,bg=black
+# set -g message-style fg=yellow,bold,bg=black
+# setw -g window-status-style fg=white,bg=black
+# setw -g window-status-current-style fg=yellow,bold,bg=black
 
 bind-key -r f run-shell "tmux new-window tmux-sessionizer"
 bind-key o run-shell "tmux new-window -c \"#{pane_current_path}\" just-sessionizer window"
@@ -40,8 +40,8 @@ bind -r M-k resize-pane -U 1
 bind -r M-l resize-pane -R 1
 bind C-r source-file ~/.config/tmux/tmux.conf
 
-set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_flavour 'moccha'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @catppuccin_flavour 'mocha'
 
 run '~/.tmux/plugins/tpm/tpm'
