--- a/stows/code/.config/tmux/tmux.conf
+++ b/stows/code/.config/tmux/tmux.conf
@@ -6,27 +6,45 @@ bind-key C-a send-prefix
 set -g default-terminal "wezterm"
 set-option -sa terminal-overrides ",xterm*:Tc"
 
-set  -g base-index 1
+set -g base-index 1
 setw -g pane-base-index 1
 set -g mode-keys vi
-set  -g mouse on
-set  -s escape-time 0
-set  -g history-limit 25000
+set -g mouse on
+set -s escape-time 0
+set -g history-limit 25000
 
+# >>> STYLE
 set -g status-position top
-set -g status-interval 30
+setw -g mode-style 'fg=colour3 bg=colour0 bold'
+
+# pane borders
+set -g pane-border-style 'fg=colour0'
+set -g pane-active-border-style 'fg=colour3'
+
+# statusbar
 set -g status-justify left
-set -g status-left ""
-set -g status-right ""
-set -g status-style fg=white,bg=black
-set -g message-style fg=yellow,bold,bg=black
-setw -g window-status-style fg=white,bg=black
-setw -g window-status-current-style fg=yellow,bold,bg=black
+set -g status-style 'fg=colour4 bg=colour0 bold'
+set -g status-left ''
+set -g status-right 'Session: #S '
+set -g status-right-length 50
+set -g status-left-length 10
+
+setw -g window-status-current-style 'fg=colour3 bg=colour0 bold'
+setw -g window-status-current-format ' #I #W #F '
+
+setw -g window-status-style 'fg=colour1 dim'
+setw -g window-status-format ' #I #[fg=colour7]#W #[fg=colour1]#F '
+
+setw -g window-status-bell-style 'fg=colour2 bg=colour1 bold'
+
+# messages
+set -g message-style 'fg=colour2 bg=colour0 bold'
+
 
 bind-key -r f run-shell "tmux new-window tmux-sessionizer"
 bind-key o run-shell "tmux new-window -c \"#{pane_current_path}\" just-sessionizer window"
-# bind-key C-o run-shell "tmux new-window -c \"#{pane_current_path}\" just-sessionizer session"
-bind-key C-o run-shell "tmux split-window -h -c \"#{pane_current_path}\" just-sessionizer in-window"
+bind-key C-o run-shell "tmux new-window -c \"#{pane_current_path}\" just-sessionizer session"
+bind-key C-p run-shell "tmux split-window -h -c \"#{pane_current_path}\" \"just-sessionizer\""
 
 bind C-x split-window -v -c "#{pane_current_path}"
 bind C-v split-window -h -c "#{pane_current_path}"
