nordic hypr and wezterm

--- a/stows/colours/nordic/.config/hypr/colours.conf
+++ b/stows/colours/nordic/.config/hypr/colours.conf
@@ -1,8 +1,8 @@
 general {
   border_size=2
-  col.active_border=rgba(d8a657ee)
-  col.inactive_border=rgba(32302fee)
+  col.active_border=rgba(d8dee9ee)
+  col.inactive_border=rgba(2e3440ee)
   layout=master
 }
 
-bind=$mod, Space, exec, bemenu-run -i -c -p '' -W 0.3 -l 20 --fn 'CommitMono 18' --fb '##32302f' --ff '##d4be98' --nb '##1d2021' --nf '##d4be98' --ab '##1d2021' --af '##d4be98' --hb '##1d2021' --hf '##d8a657'
+bind=$mod, Space, exec, bemenu-run -i -c -p '' -W 0.3 -l 20 --fn 'Hack 18' --fb '##2e3440' --ff '##d8dee9' --nb '##242933' --nf '##d8dee9' --ab '##242933' --af '##d8dee9' --hb '##242933' --hf '##d06f79'
