add tmux keybinds for next-/previous-window

--- a/stows/code/.config/tmux/tmux.conf
+++ b/stows/code/.config/tmux/tmux.conf
@@ -57,6 +57,8 @@ bind -r M-j resize-pane -D 1
 bind -r M-k resize-pane -U 1
 bind -r M-l resize-pane -R 1
 bind C-r source-file ~/.config/tmux/tmux.conf
+bind -r C-n previous-window
+bind -r C-m next-window
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
