--- a/progs/dm/Brewfile
+++ b/progs/dm/Brewfile
@@ -1,5 +1,5 @@
 tap "homebrew/bundle"
-tap "hombrew/cask-fonts"
+tap "homebrew/cask-fonts"
 tap "jstkdng/programs"
 brew "coreutils"
 brew "gnu-sed"
@@ -37,7 +37,7 @@ brew "editorconfig"
 
 # yazi
 brew "yazi"
-brew "ffmpegthumbnailer"
+#brew "ffmpegthumbnailer"
 brew "unar"
 brew "poppler"
 brew "zoxide"
