--- a/progs/dm/Brewfile
+++ b/progs/dm/Brewfile
@@ -3,6 +3,7 @@ tap "homebrew/cask-fonts"
 tap "jstkdng/programs"
 tap "benjiwolff/neovim-nightly"
 brew "coreutils"
+brew "wget"
 brew "gnu-sed"
 brew "bash"
 brew "bash-completion@2"
