--- a/stows/code/.config/tmux/tmux.conf
+++ b/stows/code/.config/tmux/tmux.conf
@@ -2,9 +2,8 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-# set -ag terminal-overrides ",wezterm:RGB"
-set -g default-terminal "wezterm"
-set-option -sa terminal-overrides ",xterm*:Tc"
+set -g default-terminal "alacritty"
+set-option -sa terminal-overrides ",alacritty:RGB"
 
 set -g base-index 1
 setw -g pane-base-index 1
