--- a/stows/code/.config/tmux/tmux.conf
+++ b/stows/code/.config/tmux/tmux.conf
@@ -60,6 +60,6 @@ bind -r C-n previous-window
 bind -r C-m next-window
 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'aserowy/tmux.nvim'
 
 run '~/.tmux/plugins/tpm/tpm'
