--- a/nvim/rocks.toml
+++ b/nvim/rocks.toml
@@ -55,11 +55,15 @@ neorg = "8.4.0"
 "mason-nvim-dap.nvim" = "2.2.2"
 
 "efmls-configs-nvim" = { git = "creativenull/efmls-configs-nvim" }
-nvim-lspconfig = "0.1.7"
-nvim-cmp = "0.0.1"
+nvim-lspconfig = "scm"
+nvim-cmp = "scm"
 cmp-path = "scm"
 cmp-nvim-lsp = "scm"
 cmp-buffer = "scm"
 cmp-cmdline = "scm"
 cmp_luasnip = "scm"
 luasnip = "2.3.0"
+"lspkind.nvim" = "scm"
+rustaceanvim = "4.23.1"
+"otter.nvim" = "1.15.0"
+"trouble.nvim" = "2.10.0"
