fixing lsp keymaps ++ luacheck

--- a/nvim/rocks.toml
+++ b/nvim/rocks.toml
@@ -55,13 +55,13 @@ neorg = "8.4.0"
 nvim-lint = "scm"
 
 nvim-lspconfig = "0.1.7"
-nvim-cmp = "scm"
+nvim-cmp = { git = "hrsh7th/nvim-cmp" }
 cmp-path = "scm"
 cmp-nvim-lsp = "scm"
 cmp-buffer = "scm"
 cmp-cmdline = "scm"
-cmp_luasnip = "scm"
-luasnip = "2.3.0"
+# cmp_luasnip = "scm"
+# luasnip = "2.3.0"
 "lspkind.nvim" = "scm"
 rustaceanvim = "4.23.2"
 "otter.nvim" = "1.15.0"
