clean up rocks.toml

--- a/nvim/rocks.toml
+++ b/nvim/rocks.toml
@@ -5,30 +5,8 @@
 "rocks-config.nvim" = "1.5.0"
 "rocks-git.nvim" = "1.5.0"
 
-nvim-treesitter = "0.9.2"
-nvim-treesitter-context = "scm"
-tree-sitter-just = { git = "indianboy42/tree-sitter-just" }
-tree-sitter-bash = "scm"
-tree-sitter-vim = "scm"
-tree-sitter-vimdoc = "scm"
-tree-sitter-lua = "scm"
-tree-sitter-markdown = "scm"
-tree-sitter-python = "scm"
-tree-sitter-c = "scm"
-tree-sitter-cpp = "scm"
-tree-sitter-rust = "scm"
-tree-sitter-go = "scm"
-tree-sitter-zig = "scm"
-tree-sitter-astro = "scm"
-tree-sitter-html = "scm"
-tree-sitter-json = "scm"
-tree-sitter-javascript = "scm"
-tree-sitter-typescript = "scm"
-tree-sitter-css = "scm"
-tree-sitter-scss = "scm"
-tree-sitter-yaml = "scm"
-tree-sitter-toml = "scm"
-tree-sitter-hyprlang = "scm"
+nvim-treesitter = { git = "nvim-treesitter/nvim-treesitter" }
+nvim-treesitter-context = { git = "nvim-treesitter/nvim-treesitter-context" }
 
 gruvbox-material = { git = "sainnhe/gruvbox-material" }
 "heirline.nvim" = "1.0.3"
@@ -60,8 +38,6 @@ cmp-path = "scm"
 cmp-nvim-lsp = "scm"
 cmp-buffer = "scm"
 cmp-cmdline = "scm"
-# cmp_luasnip = "scm"
-# luasnip = "2.3.0"
 "lspkind.nvim" = "scm"
 rustaceanvim = "4.23.2"
 "otter.nvim" = "1.15.0"
