tweak tmux.conf

--- a/stows/code/.config/tmux/tmux.conf
+++ b/stows/code/.config/tmux/tmux.conf
@@ -41,11 +41,8 @@ set -g message-style 'fg=colour2 bg=colour0 bold'
 
 
 bind-key -r f run-shell "tmux new-window tmux-sessionizer"
-bind-key o run-shell "tmux new-window -c \"#{pane_current_path}\" just-sessionizer window"
-bind-key C-o run-shell "tmux new-window -c \"#{pane_current_path}\" just-sessionizer session"
-bind-key C-p run-shell "tmux split-window -h -c \"#{pane_current_path}\" \"just-sessionizer\""
 
-bind C-x split-window -v -c "#{pane_current_path}"
+bind C-x split-window -vb -c "#{pane_current_path}"
 bind C-v split-window -h -c "#{pane_current_path}"
 bind h select-pane -L
 bind j select-pane -D
