just use neovim stable now that 0.10 is out

--- a/progs/dm/Brewfile
+++ b/progs/dm/Brewfile
@@ -16,7 +16,7 @@ tap "osx-cross/arm"
 tap "osx-cross/avr"
 
 # tools, code, terminal
-brew "bob"
+brew "neovim"
 brew "node"
 brew "go"
 brew "luarocks"
