--- a/stows/all/.editorconfig
+++ b/stows/all/.editorconfig
@@ -7,7 +7,7 @@ indent_style=space
 max_line_width=80
 trim_trailing_whitespace=true
 
-[*.{nix,cabal,hs}]
+[*.{nix,cabal,hs,lua}]
 indent_size=2
 
 [*.{json,js,jsx,ts,tsx,cjs,mjs}]
