--- a/stows/desktop/.config/alacritty/alacritty.toml
+++ b/stows/desktop/.config/alacritty/alacritty.toml
@@ -1,5 +1,5 @@
 import = ["~/.config/alacritty/colours.toml", "~/.config/alacritty/host.toml"]
-font.normal.family = "0xProto Nerd Font"
+font.normal.family = "Hack Nerd Font"
 colors.draw_bold_text_with_bright_colors = true
 
 [cursor.style]
