fix tmux split directions

--- a/stows/code/.config/tmux/tmux.conf
+++ b/stows/code/.config/tmux/tmux.conf
@@ -42,8 +42,8 @@ set -g message-style 'fg=colour2 bg=colour0 bold'
 
 bind-key -r f run-shell "tmux new-window tmux-sessionizer"
 
-bind C-x split-window -vb -c "#{pane_current_path}"
-bind C-v split-window -h -c "#{pane_current_path}"
+bind C-x split-window -v -c "#{pane_current_path}"
+bind C-v split-window -hb -c "#{pane_current_path}"
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
