--- a/stows/linux-desktop/.config/hypr/hyprland.conf
+++ b/stows/linux-desktop/.config/hypr/hyprland.conf
@@ -2,7 +2,7 @@ $mod=SUPER
 source=colours.conf
 source=host.conf
 
-exec-once = ~/.config/hypr/resetxdgportal.sh
+# exec-once = ~/.config/hypr/resetxdgportal.sh
 # exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
 # exec-once = dbus-update-activation-environment --systemd --all # for XDPH
 # exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
