--- a/progs/dm/Brewfile
+++ b/progs/dm/Brewfile
@@ -2,6 +2,7 @@ tap "homebrew/bundle"
 tap "homebrew/services"
 tap "jstkdng/programs"
 brew "coreutils"
+brew "gcc"
 brew "keyring"
 brew "wget"
 brew "gnu-sed"
