--- a/stows/x11/.config/picom/picom.conf
+++ b/stows/x11/.config/picom/picom.conf
@@ -12,7 +12,7 @@ shadow-exclude = [
   #"class_g = 'Conky'",
   #"class_g ?= 'Notify-osd'",
   #"class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@"
+  # "_GTK_FRAME_EXTENTS@"
 ];
 
 ### Fading
@@ -50,7 +50,7 @@ detect-client-opacity = true;
 ### misc
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
-refresh-rate = 0;
+# refresh-rate = 0;
 vsync = true;
 unredir-if-possible = false;
 focus-exclude = [ ];
