put alacritty keymap back on Return

--- a/stows/wayland/.config/hypr/hyprland.conf
+++ b/stows/wayland/.config/hypr/hyprland.conf
@@ -53,7 +53,7 @@ windowrulev2=workspace 3,class:^(lutris)$
 windowrulev2=workspace 3,title:^(Wine System Tray)$
 windowrulev2=workspace 4,class:^(battle.net.exe)$
 
-bind=$mod, t, exec, alacritty
+bind=$mod, Return, exec, alacritty
 bind=$mod, b, exec, brave
 bind=$mod, q, killactive,
 bind=$mod ALT, q, exit,
