hypr/fix host config

--- a/stows/wayland/.config/hypr/hyprland.conf
+++ b/stows/wayland/.config/hypr/hyprland.conf
@@ -33,15 +33,15 @@ decoration {
 }
 
 master {
-  mfact=0.500000
-  orientation=right
+  mfact = 0.500000
+  orientation = right
 }
 
 misc {
-  disable_hyprland_logo=true
-  disable_splash_rendering=true
-  key_press_enables_dpms=true
-  mouse_move_enables_dpms=true
+  disable_hyprland_logo = true
+  disable_splash_rendering = true
+  key_press_enables_dpms = true
+  mouse_move_enables_dpms = true
 }
 
 windowrulev2=float,title:^(Picture(.)in(.)picture)$
