try different screenshot utils

--- a/stows/wayland/.config/hypr/hyprland.conf
+++ b/stows/wayland/.config/hypr/hyprland.conf
@@ -84,16 +84,16 @@ bind=$mod ALT, h, resizeactive, -10,0
 bind=$mod ALT, j, resizeactive, 0,10
 bind=$mod ALT, k, resizeactive, ,-10
 bind=$mod ALT, l, resizeactive, 10,0
-bind=$mod, y, workspace, 1
-bind=$mod, u, workspace, 2
-bind=$mod, i, workspace, 3
-bind=$mod, o, workspace, 4
-bind=$mod, p, workspace, 5
-bind=$mod CTRL, y, movetoworkspace, 1
-bind=$mod CTRL, u, movetoworkspace, 2
-bind=$mod CTRL, i, movetoworkspace, 3
-bind=$mod CTRL, o, movetoworkspace, 4
-bind=$mod CTRL, p, movetoworkspace, 5
+bind=$mod, 1, workspace, 1
+bind=$mod, 2, workspace, 2
+bind=$mod, 3, workspace, 3
+bind=$mod, 4, workspace, 4
+bind=$mod, 5, workspace, 5
+bind=$mod CTRL, 1, movetoworkspace, 1
+bind=$mod CTRL, 2, movetoworkspace, 2
+bind=$mod CTRL, 3, movetoworkspace, 3
+bind=$mod CTRL, 4, movetoworkspace, 4
+bind=$mod CTRL, 5, movetoworkspace, 5
 bind=$mod, n, workspace, -1
 bind=$mod, m, workspace, +1
 bind=$mod CTRL, n, movetoworkspace, -1
