hyprlock config, waybar, etc.

--- a/stows/audron/.config/hypr/hyprpaper.conf
+++ b/stows/audron/.config/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = /home/tommy/wallpapers/gruvbox/lofi-cafe_gray.jpg
-wallpaper = ,contain:/home/tommy/wallpapers/gruvbox/lofi-cafe_gray.jpg
+preload = /home/tommy/wallpapers/gruvbox/wallhaven-7p6g99.png
+wallpaper = ,contain:/home/tommy/wallpapers/gruvbox/wallhaven-7p6g99.png
 ipc = off
 splash = false
