--- a/stows/wayland/.config/hypr/hyprland.conf
+++ b/stows/wayland/.config/hypr/hyprland.conf
@@ -9,7 +9,7 @@ source=host.conf
 
 exec = wlsunset
 exec-once = waybar
-exec-once = hypridle
+#exec-once = hypridle
 exec-once = blueman-applet
 exec-once = nm-applet --indicator
 exec-once = dunst
@@ -68,10 +68,8 @@ bind=, XF86AudioPrev, exec, playerctl previous
 bind=, XF86AudioNext, exec, playerctl next
 bindel = , XF86MonBrightnessUp, exec, brightnessctl set +5%
 bindel = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
-# bind=$mod, p, exec, grim -g "$(slurp)" - | satty --filename - --copy-command wl-copy --output-filename ~/Pictures/Screenshots/satty-$(date '+%Y%m%d-%H:%M:%S').png
-# bind=$mod ALT, p, exec, grim - | satty --filename - --copy-command wl-copy --output-filename ~/Pictures/Screenshots/satty-$(date '+%Y%m%d-%H:%M:%S').png
-bind=$mod, p, exec, hyprshot -m region
-bind=$mod ALT, p, exec, hyprshot -m region --clipboard-only
+bind=$mod, p, exec, grim -g "$(slurp)" - | satty --filename - --copy-command wl-copy --output-filename ~/Pictures/Screenshots/satty-$(date '+%Y%m%d-%H:%M:%S').png
+bind=$mod ALT, p, exec, grim - | satty --filename - --copy-command wl-copy --output-filename ~/Pictures/Screenshots/satty-$(date '+%Y%m%d-%H:%M:%S').png
 bind=$mod, j, cyclenext,
 bind=$mod, k, cyclenext, prev
 bind=$mod CTRL, h, swapwindow, l
