--- a/stows/wayland/.config/hypr/hypridle.conf
+++ b/stows/wayland/.config/hypr/hypridle.conf
@@ -1,12 +1,12 @@
 $SCREENLOCK = hyprlock
 
-general {
-    lock_cmd = $SCREENLOCK
-    # unlock_cmd = #notify-send "unlock!"
-    before_sleep_cmd = $SCREENLOCK    # command ran before sleep
-    # after_sleep_cmd = # notify-send "Awake!"
-    ignore_dbus_inhibit = 0
-}
+#general {
+#    lock_cmd = $SCREENLOCK
+#    # unlock_cmd = #notify-send "unlock!"
+#    before_sleep_cmd = $SCREENLOCK    # command ran before sleep
+#    # after_sleep_cmd = # notify-send "Awake!"
+#    ignore_dbus_inhibit = 0
+#}
 
 # Dims the display
 listener {
@@ -17,13 +17,14 @@ listener {
 
 # Lock it first before dpms off so that screen won't show for a moment after wakeup.
 listener {
-    timeout = 120
+    timeout = 300
     on-timeout = $SCREENLOCK
+    on-resume = notify-send "hi there"
 }
 
 # DPMS off
 listener {
-    timeout = 300
+    timeout = 900
     on-timeout = hyprctl dispatch dpms off
     on-resume = hyprctl dispatch dpms on
 }
