--- a/stows/code/.config/tmux/tmux.conf
+++ b/stows/code/.config/tmux/tmux.conf
@@ -40,7 +40,7 @@ setw -g window-status-bell-style 'fg=colour2 bg=colour1 bold'
 set -g message-style 'fg=colour2 bg=colour0 bold'
 
 
-bind-key -r f run-shell "tmux new-window tmux-sessionizer"
+bind-key -r f run-shell "tmux new-window ~/.local/bin/tmux-sessionizer"
 
 bind C-x split-window -v -c "#{pane_current_path}"
 bind C-v split-window -hb -c "#{pane_current_path}"
