hypr/fix color vars ++ add workspace rules when calling terminal and brave

--- a/stows/colours/catppuccin/.config/hypr/colours.conf
+++ b/stows/colours/catppuccin/.config/hypr/colours.conf
@@ -1,8 +1,4 @@
-general {
-  border_size=2
-  col.active_border=rgba(d8a657ee)
-  col.inactive_border=rgba(32302fee)
-  layout=master
-}
-
-bind=$mod, Space, exec, bemenu-run -i -c -p '' -W 0.3 -l 20 --fn 'CommitMono 18' --fb '##32302f' --ff '##d4be98' --nb '##1d2021' --nf '##d4be98' --ab '##1d2021' --af '##d4be98' --hb '##1d2021' --hf '##d8a657'
+$COL_ACCENT = d8a657
+$COL_BG = 1d2021
+$COL_BG_BRIGHT = 32302f
+$COL_FG = d4be98
