--- a/stows/colours/nordic/.config/hypr/colours.conf
+++ b/stows/colours/nordic/.config/hypr/colours.conf
@@ -1,8 +1,4 @@
-general {
-  border_size=2
-  col.active_border=rgba(88c0d0ee)
-  col.inactive_border=rgba(2e3440ee)
-  layout=master
-}
-
-bind=$mod, Space, exec, bemenu-run -i -c -p '' -W 0.3 -l 20 --fn 'Hack 18' --fb '##2e3440' --ff '##d8dee9' --nb '##242933' --nf '##d8dee9' --ab '##242933' --af '##d8dee9' --hb '##242933' --hf '##88c0d0'
+$COL_ACCENT = 88c0d0
+$COL_BG = 242933
+$COL_BG_BRIGHT = 2e3440
+$COL_FG = d8dee9
