--- a/stows/wayland/.config/hypr/hyprland.conf
+++ b/stows/wayland/.config/hypr/hyprland.conf
@@ -16,7 +16,6 @@ exec-once = dunst
 exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
 exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
 exec-once = hyprpaper
-# exec-once=swaybg -m fill -i /home/tommy/syncthing/personal/wallpapers/gruvbox/lofi-cafe_gray.jpg
 
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
@@ -29,7 +28,14 @@ env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = MOZ_ENABLE_WAYLAND,1
 
 decoration {
-  rounding=5
+  rounding = 5
+}
+
+general {
+  border_size = 1
+  col.active_border = 0xee$COL_ACCENT
+  col.inactive_border = 0xee$COL_BG_BRIGHT
+  layout = master
 }
 
 master {
@@ -44,57 +50,59 @@ misc {
   mouse_move_enables_dpms = true
 }
 
-windowrulev2=float,title:^(Picture(.)in(.)picture)$
-windowrulev2=pin,title:^(Picture(.)in(.)picture)$
-windowrulev2=float,class:^(steam)$,title:^(Friends list)$
-windowrulev2=float,class:^(steam)$,title:^(Steam Settings)$
-windowrulev2=workspace 3,class:^(steam)$
-windowrulev2=workspace 3,class:^(lutris)$
-windowrulev2=workspace 3,title:^(Wine System Tray)$
-windowrulev2=workspace 4,class:^(battle.net.exe)$
+windowrulev2 = float,title:^(Picture(.)in(.)picture)$
+windowrulev2 = pin,title:^(Picture(.)in(.)picture)$
+windowrulev2 = float,class:^(steam)$,title:^(Friends list)$
+windowrulev2 = float,class:^(steam)$,title:^(Steam Settings)$
+windowrulev2 = workspace 3,class:^(steam)$
+windowrulev2 = workspace 3,class:^(lutris)$
+windowrulev2 = workspace 3,title:^(Wine System Tray)$
+windowrulev2 = workspace 4,class:^(battle.net.exe)$
 
-bind=$mod, Return, exec, alacritty
-bind=$mod, b, exec, brave
-bind=$mod, q, killactive,
-bind=$mod ALT, q, exit,
-bind=$mod, f, fullscreen, 1
-bind=$mod ALT, f, fullscreen, 0
-bind=$mod ALT, v, togglefloating,
-bind=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_SINK@ 5%+
-bind=, XF86AudioLowerVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_SINK@ 5%-
-bind=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_SINK@ toggle
-bind=, XF86AudioPlay, exec, playerctl play-pause
-bind=, XF86AudioPrev, exec, playerctl previous
-bind=, XF86AudioNext, exec, playerctl next
+bind = $mod, Space, exec, bemenu-run -i -p '' --fn 'Hack' --fb '##$COL_BG' --ff '##$COL_FG' --nb '##$COL_BG' --nf '##$COL_FG' --ab '##$COL_BG' --af '##$COL_FG' --hb '##$COL_BG' --hf '##$COL_ACCENT'
+
+bind = $mod, Return, exec, [workspace 2] alacritty
+bind = $mod, b, exec, [workspace 1] brave
+bind = $mod, q, killactive,
+bind = $mod ALT, q, exit,
+bind = $mod, f, fullscreen, 1
+bind = $mod ALT, f, fullscreen, 0
+bind = $mod ALT, v, togglefloating,
+bind = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_SINK@ 5%+
+bind = , XF86AudioLowerVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_SINK@ 5%-
+bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_SINK@ toggle
+bind = , XF86AudioPlay, exec, playerctl play-pause
+bind = , XF86AudioPrev, exec, playerctl previous
+bind = , XF86AudioNext, exec, playerctl next
 bindel = , XF86MonBrightnessUp, exec, brightnessctl set +5%
 bindel = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
-bind=$mod, p, exec, grim -g "$(slurp)" - | satty --filename - --copy-command wl-copy --output-filename ~/Pictures/Screenshots/satty-$(date '+%Y%m%d-%H:%M:%S').png
-bind=$mod ALT, p, exec, grim - | satty --filename - --copy-command wl-copy --output-filename ~/Pictures/Screenshots/satty-$(date '+%Y%m%d-%H:%M:%S').png
-bind=$mod, j, cyclenext,
-bind=$mod, k, cyclenext, prev
-bind=$mod CTRL, h, swapwindow, l
-bind=$mod CTRL, j, swapwindow, d
-bind=$mod CTRL, k, swapwindow, u
-bind=$mod CTRL, l, swapwindow, r
-bind=$mod, Tab, cyclenext,
-bind=$mod, Tab, bringactivetotop,
-bind=$mod ALT, h, resizeactive, -10,0
-bind=$mod ALT, j, resizeactive, 0,10
-bind=$mod ALT, k, resizeactive, ,-10
-bind=$mod ALT, l, resizeactive, 10,0
-bind=$mod, 1, workspace, 1
-bind=$mod, 2, workspace, 2
-bind=$mod, 3, workspace, 3
-bind=$mod, 4, workspace, 4
-bind=$mod, 5, workspace, 5
-bind=$mod CTRL, 1, movetoworkspace, 1
-bind=$mod CTRL, 2, movetoworkspace, 2
-bind=$mod CTRL, 3, movetoworkspace, 3
-bind=$mod CTRL, 4, movetoworkspace, 4
-bind=$mod CTRL, 5, movetoworkspace, 5
-bind=$mod, n, workspace, -1
-bind=$mod, m, workspace, +1
-bind=$mod CTRL, n, movetoworkspace, -1
-bind=$mod CTRL, m, movetoworkspace, +1
-bindm=$mod, mouse:272, movewindow
-bindm=$mod, mouse:273, resizewindow
+bind = $mod, p, exec, grim -g "$(slurp)" - | satty --filename - --copy-command wl-copy --output-filename ~/Pictures/Screenshots/satty-$(date '+%Y%m%d-%H:%M:%S').png
+bind = $mod ALT, p, exec, grim - | satty --filename - --copy-command wl-copy --output-filename ~/Pictures/Screenshots/satty-$(date '+%Y%m%d-%H:%M:%S').png
+bind = $mod, j, cyclenext,
+bind = $mod, k, cyclenext, prev
+bind = $mod CTRL, h, swapwindow, l
+bind = $mod CTRL, j, swapwindow, d
+bind = $mod CTRL, k, swapwindow, u
+bind = $mod CTRL, l, swapwindow, r
+bind = $mod, Tab, cyclenext,
+bind = $mod, Tab, bringactivetotop,
+bind = $mod ALT, h, resizeactive, -10,0
+bind = $mod ALT, j, resizeactive, 0,10
+bind = $mod ALT, k, resizeactive, ,-10
+bind = $mod ALT, l, resizeactive, 10,0
+bind = $mod, 1, workspace, 1
+bind = $mod, 2, workspace, 2
+bind = $mod, 3, workspace, 3
+bind = $mod, 4, workspace, 4
+bind = $mod, 5, workspace, 5
+bind = $mod CTRL, 1, movetoworkspace, 1
+bind = $mod CTRL, 2, movetoworkspace, 2
+bind = $mod CTRL, 3, movetoworkspace, 3
+bind = $mod CTRL, 4, movetoworkspace, 4
+bind = $mod CTRL, 5, movetoworkspace, 5
+bind = $mod, n, workspace, -1
+bind = $mod, m, workspace, +1
+bind = $mod CTRL, n, movetoworkspace, -1
+bind = $mod CTRL, m, movetoworkspace, +1
+bindm = $mod, mouse:272, movewindow
+bindm = $mod, mouse:273, resizewindow
