--- a/stows/wayland/.config/hypr/hyprlock.conf
+++ b/stows/wayland/.config/hypr/hyprlock.conf
@@ -49,7 +49,7 @@ label {
 # USER
 label {
     monitor =
-    text = logged in as: $USER
+    text = Wake up, Samurai
     color = $foreground
     #color = rgba(255, 255, 255, 0.6)
     font_size = 25
