--- a/dm/Brewfile
+++ b/dm/Brewfile
@@ -42,6 +42,7 @@ brew "tokei"
 brew "hyperfine"
 brew "just"
 brew "starship"
+brew "oh-my-posh"
 brew "fastfetch"
 brew "zoxide"
 brew "editorconfig"
