fix waybar window format

--- a/stows/wayland/.config/waybar/config.jsonc
+++ b/stows/wayland/.config/waybar/config.jsonc
@@ -8,7 +8,7 @@
   "modules-right": ["pulseaudio", "battery", "tray"],
 
   "hyprland/window": {
-    "format": "👉 {}",
+    "format": "{}",
     "rewrite": {
       "(.*) — Brave": "Brave",
     },
