--- a/stows/wayland/.config/electron/electron-flags.conf
+++ b/stows/wayland/.config/electron/electron-flags.conf
@@ -1,3 +1,5 @@
 --ozone-platform-hint=auto
+--ozone-platform=wayland
 --enable-webrtc-pipewire-capturer
+--enable-features=WaylandWindowDecorations
 --gtk-version=4
