--- a/stows/wayland/.config/hypr/hyprland.conf
+++ b/stows/wayland/.config/hypr/hyprland.conf
@@ -26,6 +26,7 @@ env = QT_QPA_PLATFORMTHEME,qt5ct
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = MOZ_ENABLE_WAYLAND,1
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 
 decoration {
   rounding = 5
