add bear to arch and brew

--- a/dm/Brewfile
+++ b/dm/Brewfile
@@ -3,6 +3,7 @@ tap "homebrew/services"
 tap "jstkdng/programs"
 brew "coreutils"
 brew "gcc"
+brew "bear"
 brew "keyring"
 brew "wget"
 brew "gnu-sed"
