always install meson and ninja

--- a/dm/Brewfile
+++ b/dm/Brewfile
@@ -3,6 +3,8 @@ tap "homebrew/services"
 tap "jstkdng/programs"
 brew "coreutils"
 brew "gcc"
+brew "meson"
+brew "ninja"
 brew "bear"
 brew "keyring"
 brew "wget"
